# analytical-platform-dashboard-service

./: .env.example  .gitignore  .grype.yml  .jscpd.json  .pre-commit-config.yaml  .prettierignore  .stylelintrc.json  .trivyignore  Dockerfile  README.md  docker-compose-postgres.yml  docker-compose-test.yml  docker-entrypoint.sh  justfile  manage.py  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build-test.yml  chart-lint.yml  chart-release.yml  code-ql-scan.yml  container-scan.yml  dependency-review.yml  release.yml  super-linter.yml  zizmor.yml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
dashboard_service/: asgi.py  urls.py  views.py  wsgi.py
dashboard_service/dashboards/: api.py  apps.py  urls.py  views.py
dashboard_service/middleware/: logging.py
dashboard_service/settings/: __init__.py  common.py  development.py  local.py  production.py  test.py
dashboard_service/users/: apps.py  models.py  utils.py
dashboard_service/users/migrations/: 0001_initial.py  0002_user_auth0_id_user_external_provider_id.py  0003_alter_user_managers_remove_user_username_and_more.py
scss/: app.scss
templates/: 404.html  500.html  accessibility.html  base.html
templates/base/: base.html  footer.html  header.html
templates/dashboards/: detail.html  index.html
templates/includes/: pagination.html
templates/login/: login_fail.html
tests/: conftest.py  test_settings.py  test_views.py
tests/dashboard_service/: conftest.py  test_api.py  test_views.py
tests/users/: test_models.py  test_utils.py
