[project]
name = "analytical-platform-dashboard-service"
version = "0.1.0"
description = "Dashboard Service for Analytical Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.6.6",
    "django==5.2.11",
    "django-extensions==4.1",
    "django-structlog==10.0.0",
    "gunicorn==25.0.2",
    "psycopg[binary]==3.3.2",
    "pytest-django==4.11.1",
    "python-dotenv==1.2.1",
    "requests==2.32.5",
    "sentry-sdk==2.51.0",
    "whitenoise==6.11.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.2.0",
    "pre-commit==4.5.1",
    "pytest==9.0.2",
    "ruff==0.15.0",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
addopts = "-v --tb=auto --ds=dashboard_service.settings.test"
testpaths = ["tests"]
