[project]
name = "analytical-platform-dashboard-service"
version = "0.1.0"
description = "Dashboard Service for Analytical Platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "authlib==1.7.2",
    "django==5.2.14",
    "django-extensions==4.1",
    "django-structlog==10.0.0",
    "gunicorn==26.0.0",
    "psycopg[binary]==3.3.4",
    "pytest-django==4.12.0",
    "python-dotenv==1.2.2",
    "requests==2.34.2",
    "sentry-sdk==2.60.0",
    "whitenoise==6.12.0",
]

[dependency-groups]
dev = [
    "django-debug-toolbar==6.3.0",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "ruff==0.15.16",
]

[tool.ruff]
line-length = 99

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.pytest.ini_options]
addopts = "-v --tb=auto --ds=dashboard_service.settings.test"
testpaths = ["tests"]
